--- a/src/Components/Kitchen/KitchenDashBord.scss
+++ b/src/Components/Kitchen/KitchenDashBord.scss
@@ -4,16 +4,19 @@
     display: flex;
     justify-content: space-around;
     padding-top: 20px;
-background-color: lightblue !important;
+background-color: white !important;
 .dashboard-links{
     width: 17%;
     height:620px;
-
+    opacity: 0.6;
+    background-color: #494949 !important;
     .profileDiv{
+
+        // background-color: white !important;
 margin: 60px auto;
         .nameProfile{
             font-family: sans-serif !important;
-            color: brown;
+            color: white;
             font-size: 20px;
         }
         .profile{
@@ -26,7 +29,8 @@ margin: 60px auto;
     .btnDiv{
 .btns{
     color: white;
-    background-color: green;
+    background-color: #332828;
+
 }
         display: flex;
         flex-direction: column;
@@ -35,7 +39,7 @@ margin: 60px auto;
         justify-content: space-between;
 .btnsLogout{
     width: 100px;
-    background-color: maroon;
+    background-color: maroon !important;
     margin: 0px auto;
     color: white;
 }
@@ -43,7 +47,9 @@ margin: 60px auto;
 }
 .dashboard-links-data{
     width: 80%;
+    opacity: 0.8;
     height:620px;
+    background-color: white !important;
 
 }
 
