--- a/src/Components/User/UserNav.scss
+++ b/src/Components/User/UserNav.scss
@@ -1,16 +1,22 @@
  .navbar3{
  display: flex;
  justify-content: space-around;
-
+padding: 10px;
     .card1{
-        width: 455px;
-        height: 200px;
+        width: 450px;
+        height: 150px;
+        // border-right: 1px solid black;
         // border-right: 2px solid black ;
         background-color: #FFFFFF !important;
     .text{
         font-size: 25px;
         font-family: sans-serif;
         color: black;
+        font-style: italic;
+    }
+    .map{
+        border-radius: 10px;
+        border: 2px solid black;
     }
     }
     .iconsMain{
@@ -25,8 +31,9 @@
       width: 300px;
       margin: 65px auto;
       img{
-          border: 1px solid red;
+          border: 2px solid black;
           border-radius:50%;
+      
       }
   }
     }
